Closed Bug 1729082 Opened 3 years ago Closed 3 years ago

Stop leaking the portal file descriptor

Categories

(Core :: WebRTC, defect, P2)

defect

Tracking

()

RESOLVED FIXED
93 Branch
Tracking Status
firefox93 --- fixed

People

(Reporter: rmader, Assigned: rmader)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

We should properly close the FD when not needed any more.

It is used to create the pw_core object that is disconnected above.

Assignee: nobody → robert.mader
Status: NEW → ASSIGNED

Changing severity to S3 because this is needed for pipewire.

Severity: -- → S3
Priority: -- → P2
Pushed by robert.mader@posteo.de:
https://hg.mozilla.org/integration/autoland/rev/90c249e8a8eb
Stop leaking the portal Pipewire file descriptor, r=emilio
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 93 Branch
Blocks: 1729787
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: