Bug 1729082 - Stop leaking the portal Pipewire file descriptor, r=emilio

It is used to create the `pw_core` object that is disconnected above.

Differential Revision: https://phabricator.services.mozilla.com/D124508